--- a/views/georgia.hbs
+++ b/views/georgia.hbs
@@ -44,13 +44,14 @@
     <section class="main">
       <div id="hero">
         <div id="hero-content">
-          <h1>TOP Universitie in GEORGIA </h1>
+          {{!-- <h1>TOP Universitie in GEORGIA </h1> --}}
           <!-- <h2>shashi</h2> -->
         </div>
       </div>
 
       <div id="top-study">
-        <h1>TOP Study</h1>
+        <h1>STUDY TOP UNIVERSITY IN GEORGIA</h1>
+        <p>Study in Georgia and turn your dreams into reality with expert admission guidance from Erudite Educare LLC</p>
         <div id="top-study-content">
           <div id="tip-study1">
             <a href="/universities"><img src="https://cdn-icons-gif.flaticon.com/14250/14250879.gif" alt=""></a>
@@ -99,7 +100,7 @@
                 very low crime rate.
               </h2>
               <h3>Education in Georgia</h3>
-              <p>
+              <h2>
                 Higher education in Georgia is segregated into three categories:<br>
                 1. Bachelor Program<br>
                 2. Master’s Program<br>
@@ -107,7 +108,7 @@
                 Georgia’s education system follows the European Bologna Process and is recognized by the European Union.
                 According to UNICEF,
 
-              </p>
+              </h2>
               <a href="/georgia-full" id="see-more" class="blinking-link">Click for Full details</a>
             </div>
             <!-- Right Div with Form -->
