--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -53,8 +53,7 @@
               <ul>
                 <li><a href="#">Student videos</a></li>
                 <li><a href="#">Photo gallery</a></li>
-                <li><a href="#">TSC prospectus</a></li>
-                <li><a href="#">Student newsletter</a></li>
+                <li><a href="#">Prospectus</a></li>
                 <li><a href="#">Student portal</a></li>
               </ul>
             </div>
@@ -68,7 +67,6 @@
                 <li><a href="#">Admission Documents</a></li>
                 <li><a href="#">Frequently asked questions</a></li>
                 <li><a href="#">Student accommodation</a></li>
-                <li><a href="#">Student Jobs</a></li>
               </ul>
             </div>
           </div>
@@ -79,7 +77,6 @@
                 <li><a href="#">Counselling</a></li>
                 <li><a href="#">Test Preparation</a></li>
                 <li><a href="#">Admission</a></li>
-                <li><a href="#">Education Loan</a></li>
                 <li><a href="#">Visa Processing</a></li>
               </ul>
             </div>
@@ -93,7 +90,7 @@
                     <img src="/assets/img/icon/location-02.png" alt="Location Icon" />
                   </div>
                   <div class="details">
-                    8502 Preston Rd. Inglewood, Maine Bangladesh
+                    26 Tiljala Road,  Kolkata - 700039, West Bengal, India
                   </div>
                 </li>
                 <li class="single-info-item">
@@ -117,8 +114,7 @@
         <div class="col-lg-12">
           <div class="copyright-area-inner">
             <p>
-              © 2022 Eduplan. All rights reserved | Developed By
-              <span>Themeim</span>
+              © 2025  All rights reserved | Developed By Erudite Educare LLC.
             </p>
             <div class="footer-social-area">
               <ul class="social-icon-02">
